# rust-rest-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  docker-compose.yml
.cargo/: config.production.toml  config.toml
src/: lib.rs  main.rs  thread_pool.rs
src/database/: mod.rs  model.rs
src/database/models/: menu.rs  mod.rs  order.rs  table.rs
src/http/: method.rs  mod.rs  router.rs
src/routes/: menu.rs  mod.rs  orders.rs  tables.rs
