[package]
name = "restaurant_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde-well-known"] }
uncased = "0.9.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
